set up base styles

--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,8 +1,11 @@
 footer
   .container.text-center
-    p.pull-left © 2016 Company, Inc. All Rights Reserved
-    ul.pull-right.list-inline
-      li
-        a(href='https://github.com/sahat/hackathon-starter') GitHub Project
-      li
-        a(href='https://github.com/sahat/hackathon-starter/issues') Issues
+    .row
+      .col-xs-6.text-left
+        p © 2017 Company, Inc. All Rights Reserved
+      .col-xs-6.text-right
+        ul.pull-right.list-inline
+          li
+            a(href='https://github.com/sahat/hackathon-starter') GitHub Project
+          li
+            a(href='https://github.com/sahat/hackathon-starter/issues') Issues
