--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,1 +1,44 @@
 @import "lib/font-awesome/font-awesome";
+
+html, body {
+  font-size: 14px;
+  line-height: 1.5; 
+  font-family: 'Roboto', sans-serif;
+}
+/* lobotomized owl for vert rhythm */
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+}
+[class*="col-"] > * + *,
+.row {
+  margin-top: 1.5em;
+  margin-top: 1.5rem; // Keep this equal to line height
+  margin-bottom: 0;
+}
+
+.note-editor:nth-child(2),
+.m-t-0 {
+  margin-top: 0;
+}
+h1 {
+  font-size: 3em;
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.25em;
+  font-size: 2.25rem;
+}
+h3 {
+  font-size: 1.75em;
+  font-size: 1.75rem;
+}
+h4 {
+  font-size: 1.25em;
+  font-size: 1.25rem;
+}
+
+@media screen and (min-width: 769px){
+  html, body {
+    font-size: 18px;
+  }  
+}
