--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,7 +15,7 @@ html
   body
     include partials/header
 
-    .container
+    .container.main-content
       include partials/flash
       block content
 
