--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,6 +24,8 @@ html
     script(src='/bower_components/jquery/dist/jquery.min.js')
     script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
     script(src='/bower_components/summernote/dist/summernote.min.js')
+    script(src='/node_modules/mammoth/mammoth.browser.min.js')
+    script(src='/js/editorService.js')
     script(src='/js/main.js')
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID
