--- a/views/home.pug
+++ b/views/home.pug
@@ -6,12 +6,14 @@ block content
       h1 Hackathon Starter
       p A boilerplate for Node.js web applications.
   .row
+    .col-sm-4
+      h2 Convert Docx to HTML
+      ol
+        li Click Choose a File and select your file
+        li Clean up in the editor
+        li Click the code view button
+        li Copy and paste contents into raw html
+      
     .col-sm-8
       #summer-note
-      p
-        a.btn.btn-default(href='#', role='button') View details »
-    .col-sm-4
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-      p
-        a.btn.btn-default(href='#', role='button') View details »
+    
