make sure images have space around them

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,6 +25,9 @@ html
     script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
     script(src='/bower_components/summernote/dist/summernote.min.js')
     script(src='/node_modules/mammoth/mammoth.browser.min.js')
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.6.8/beautify.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.6.8/beautify-css.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.6.8/beautify-html.min.js")
     script(src='/js/editorService.js')
     script(src='/js/main.js')
 
