--- a/views/home.pug
+++ b/views/home.pug
@@ -3,17 +3,8 @@ extends layout
 block content
   .row
     .col-sm-12
-      h1 Hackathon Starter
-      p A boilerplate for Node.js web applications.
-  .row
-    .col-sm-4
-      h2 Convert Docx to HTML
-      ol
-        li Click Choose a File and select your file
-        li Clean up in the editor
-        li Click the code view button
-        li Copy and paste contents into raw html
-      
-    .col-sm-8
+      h1 Convert to HTML
+  .row      
+    .col-sm-12
       #summer-note
     
